[package]
name = "audio_wrench"
version = "0.1.0"
authors = ["Aron Heinecke <aron.heinecke@t-online.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
stable-eyre = "0.2"
iced_native = "0.3"
log = "0.4"
iced = {version = "0.2",features = ["tokio"]}
env_logger = "0.8"
rodio = "0.13"
playlist-decoder = "0.8"
rand = "0.8"
serde = {version = "1", features = ["derive"] }
serde_json = "1"
dirs = "3"
url = "2.2"
quick-xml = "0.21"